--- a/examples/nest-graphql-typeorm-multidb/docker-compose.yml
+++ b/examples/nest-graphql-typeorm-multidb/docker-compose.yml
@@ -2,19 +2,21 @@ version: "3"
 
 services:
   db1:
-    image: "postgres:11.5"
+    image: "postgres:11.7"
     environment:
       - "POSTGRES_USER=graphqltypeorm_mdb1"
       - "POSTGRES_DB=graphql_typeorm_mdb1"
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
     expose:
       - "5432"
     ports:
       - "5437:5432"
   db2:
-    image: "postgres:11.5"
+    image: "postgres:11.7"
     environment:
       - "POSTGRES_USER=graphqltypeorm_mdb2"
       - "POSTGRES_DB=graphql_typeorm_mdb2"
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
     expose:
       - "5432"
     ports:
