--- a/examples/nest-graphql-typeorm/docker-compose.yml
+++ b/examples/nest-graphql-typeorm/docker-compose.yml
@@ -2,10 +2,11 @@ version: "3"
 
 services:
   postgres:
-    image: "postgres:11.5"
+    image: "postgres:11.7"
     environment:
       - "POSTGRES_USER=graphqltypeorm"
       - "POSTGRES_DB=graphql_typeorm"
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
     expose:
       - "5432"
     ports:
