--- a/lerna.json
+++ b/lerna.json
@@ -9,6 +9,9 @@
     "version": {
       "message": "chore(release): publish %s",
       "allowBranch": "master"
+    },
+    "bootstrap": {
+      "hoist": true
     }
   },
   "version": "0.8.5"
