--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nestjs-query",
   "private": true,
   "scripts": {
-    "bootstrap": "lerna bootstrap --hoist",
+    "bootstrap": "lerna bootstrap",
     "clean": "lerna run clean",
     "build": "lerna run build",
     "compile": "lerna run compile",
