chore(renovate): Update to automerge devDeps

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,10 @@
   "extends": [
     "config:base"
   ],
+  "packageRules": [{
+    "depTypeList": ["devDependencies"],
+    "automerge": true
+  }],
   "ignorePaths": [
   ]
 }
