chore(lerna): Change to conventional commits

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "clean": "lerna run clean",
     "build": "lerna run build",
     "compile": "lerna run compile",
-    "pub": "lerna publish from-git",
-    "version": "lerna version",
+    "lerna:pub": "lerna publish from-git",
+    "lerna:version": "lerna version",
     "test": "npm run lint && npm run jest",
     "test:e2e": "npm run jest:e2e",
     "lint": "eslint --ext=.ts .",
