--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,10 @@
   "command": {
     "version": {
       "message": "chore(release): publish %s",
-      "allowBranch": "master"
+      "allowBranch": "master",
+      "exact": true,
+      "createRelease": "github",
+      "conventionalCommits": true
     },
     "bootstrap": {
       "hoist": true
