--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -18,13 +18,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "^0.8.6"
+    "@nestjs-query/core": "0.8.6"
   },
   "peerDependencies": {
-    "@nestjs/common": "^7.0.8",
-    "@nestjs/typeorm": "^7.0.0",
-    "class-transformer": "^0.2.3",
-    "typeorm": "^0.2.24"
+    "@nestjs/common": "7.0.8",
+    "@nestjs/typeorm": "7.0.0",
+    "class-transformer": "0.2.3",
+    "typeorm": "0.2.24"
   },
   "devDependencies": {
     "@nestjs/common": "7.0.8",
