--- a/examples/federation/sub-task-graphql/package.json
+++ b/examples/federation/sub-task-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sub-task-graphql",
-  "version": "0.8.6",
+  "version": "0.8.7",
   "description": "",
   "author": "",
   "private": true,
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "@apollo/federation": "0.14.1",
-    "@nestjs-query/core": "^0.8.6",
-    "@nestjs-query/query-graphql": "^0.8.6",
-    "@nestjs-query/query-typeorm": "^0.8.6",
+    "@nestjs-query/core": "0.8.7",
+    "@nestjs-query/query-graphql": "0.8.7",
+    "@nestjs-query/query-typeorm": "0.8.7",
     "@nestjs/common": "7.0.8",
     "@nestjs/core": "7.0.8",
     "@nestjs/graphql": "7.3.4",
