--- a/examples/nest-graphql-typeorm/package.json
+++ b/examples/nest-graphql-typeorm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nest-graphql-typeorm",
-  "version": "0.8.6",
+  "version": "0.8.7",
   "description": "",
   "author": "",
   "private": true,
@@ -17,9 +17,9 @@
     "seed": "ts-node ../../node_modules/typeorm-seeding/dist/cli.js -n /ormconfig.json seed"
   },
   "dependencies": {
-    "@nestjs-query/core": "^0.8.6",
-    "@nestjs-query/query-graphql": "^0.8.6",
-    "@nestjs-query/query-typeorm": "^0.8.6",
+    "@nestjs-query/core": "0.8.7",
+    "@nestjs-query/query-graphql": "0.8.7",
+    "@nestjs-query/query-typeorm": "0.8.7",
     "@nestjs/common": "7.0.8",
     "@nestjs/core": "7.0.8",
     "@nestjs/graphql": "7.3.4",
