--- a/examples/nest-graphql-sequelize/docker-compose.yml
+++ b/examples/nest-graphql-sequelize/docker-compose.yml
@@ -2,11 +2,12 @@ version: "3"
 
 services:
   postgres:
-    image: "postgres:11.5"
+    image: "postgres:11.7"
     environment:
       - "POSTGRES_USER=graphqlsequelize"
       - "POSTGRES_DB=graphql_sequelize"
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
     expose:
       - "5432"
     ports:
-      - "5437:5432"
+      - "5441:5432"
