--- a/examples/nest-graphql-sequelize/package.json
+++ b/examples/nest-graphql-sequelize/package.json
@@ -21,7 +21,7 @@
 		"@nestjs/core": "7.0.9",
 		"@nestjs/graphql": "7.3.4",
 		"@nestjs/platform-express": "7.0.9",
-		"@nestjs/typeorm": "7.0.0",
+		"@nestjs/sequelize": "0.1.0",
 		"apollo-server-express": "2.12.0",
 		"graphql": "15.0.0",
 		"graphql-tools": "5.0.0",
