--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -24,6 +24,7 @@ jobs:
       - run: docker-compose -f ./examples/federation/docker-compose.yml up -d
       - run: docker-compose -f ./examples/nest-graphql-typeorm-soft-delete/docker-compose.yml up -d
       - run: docker-compose -f ./examples/nest-graphql-sequelize/docker-compose.yml up -d
+      - run: docker-compose -f ./examples/nest-graphql-basic/docker-compose.yml up -d
       - run: npm ci
       - run: npm run bootstrap -- --ignore-scripts
       - run: npm run build
