test(graphql): Fix reference resolver tests

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:e2e": "npm run jest:e2e",
     "lint": "eslint --ext=.ts .",
     "lint:fix": "eslint --fix --ext=.ts .",
-    "jest": "jest --runInBand --coverage",
+    "jest": "jest --coverage",
     "jest:e2e": "jest --runInBand --config=./jest.e2e.config.js --coverage",
     "coverage": "cat ./coverage/lcov.info | coveralls"
   },
