--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Restore Dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{matrix.node-version}}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-${{matrix.node-version}}-
       - run: npm ci
       - run: npm run bootstrap
       - run: npm test
@@ -46,6 +53,13 @@ jobs:
       - run: docker-compose -f ./examples/nest-graphql-typeorm-soft-delete/docker-compose.yml up -d
       - run: docker-compose -f ./examples/nest-graphql-sequelize/docker-compose.yml up -d
       - run: docker-compose -f ./examples/nest-graphql-basic/docker-compose.yml up -d
+      - name: Restore Dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{matrix.node-version}}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-${{matrix.node-version}}-
       - run: npm ci
       - run: npm run bootstrap -- --ignore-scripts
       - run: npm run build
