--- a/examples/federation/tag-graphql/package.json
+++ b/examples/federation/tag-graphql/package.json
@@ -26,6 +26,7 @@
     "@nestjs/graphql": "7.3.9",
     "@nestjs/platform-express": "7.0.13",
     "@nestjs/typeorm": "7.0.0",
+    "class-validator": "0.12.2",
     "apollo-server-express": "2.13.1",
     "graphql": "15.0.0",
     "graphql-tools": "6.0.0",
