--- a/examples/federation/sub-task-graphql/ormconfig.json
+++ b/examples/federation/sub-task-graphql/ormconfig.json
@@ -2,9 +2,9 @@
   "name": "sub-task-db",
   "type": "postgres",
   "host": "localhost",
-  "port": 5438,
-  "username": "graphqlfederation_db2",
-  "database": "graphql_federation_db2",
+  "port": 5436,
+  "username": "federation_sub_task",
+  "database": "federation_sub_task",
   "autoLoadEntities": true,
   "entities": [
     "dist/**/*.entity.js"
