--- a/examples/federation/tag-graphql/ormconfig.json
+++ b/examples/federation/tag-graphql/ormconfig.json
@@ -2,9 +2,9 @@
   "name": "tag-db",
   "type": "postgres",
   "host": "localhost",
-  "port": 5439,
-  "username": "graphqlfederation_db3",
-  "database": "graphql_federation_db3",
+  "port": 5436,
+  "username": "federation_tag",
+  "database": "federation_tag",
   "autoLoadEntities": true,
   "entities": [
     "dist/**/*.entity.js"
