--- a/examples/federation/todo-item-graphql/ormconfig.json
+++ b/examples/federation/todo-item-graphql/ormconfig.json
@@ -2,9 +2,9 @@
   "name": "todo-item-db",
   "type": "postgres",
   "host": "localhost",
-  "port": 5437,
-  "username": "graphqlfederation_db1",
-  "database": "graphql_federation_db1",
+  "port": 5436,
+  "username": "federation_todo_item",
+  "database": "federation_todo_item",
   "autoLoadEntities": true,
   "entities": [
     "./dist/**/*.entity.js"
