--- a/examples/nest-graphql-typeorm-soft-delete/ormconfig.json
+++ b/examples/nest-graphql-typeorm-soft-delete/ormconfig.json
@@ -1,9 +1,9 @@
 {
   "type": "postgres",
   "host": "localhost",
-  "port": 5440,
-  "username": "graphqltypeorm",
-  "database": "graphql_typeorm_soft_delete",
+  "port": 5436,
+  "username": "typeorm_soft_delete",
+  "database": "typeorm_soft_delete",
   "autoLoadEntities": true,
   "entities": ["**/*.entity.js"],
   "seeds": ["./dist/seeds.js"],
