--- a/examples/nest-graphql-typeorm/ormconfig.json
+++ b/examples/nest-graphql-typeorm/ormconfig.json
@@ -2,8 +2,8 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5436,
-  "username": "graphqltypeorm",
-  "database": "graphql_typeorm",
+  "username": "typeorm",
+  "database": "typeorm",
   "autoLoadEntities": true,
   "entities": ["**/*.entity.js"],
   "seeds": ["./dist/seeds.js"],
