--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@nestjs/common": "7.1.0",
+    "@nestjs/testing": "7.1.0",
     "@types/lodash.merge": "4.6.6",
     "class-transformer": "0.2.3",
     "ts-mockito": "2.5.0",
