--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,8 +34,8 @@
     "lodash.merge": "4.6.2"
   },
   "peerDependencies": {
-    "@nestjs/common": "7.1.1",
-    "class-transformer": "0.2.3"
+    "@nestjs/common": "^7.0.0",
+    "class-transformer": "^0.2.3"
   },
   "devDependencies": {
     "@nestjs/common": "7.1.1",
