--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -45,14 +45,13 @@
     "upper-case-first": "2.0.1"
   },
   "peerDependencies": {
-    "@nestjs/common": "7.1.1",
-    "@nestjs/graphql": "7.3.11",
-    "class-transformer": "0.2.3",
-    "class-validator": "0.12.2",
-    "dataloader": "2.0.0",
-    "graphql": "15.0.0",
-    "graphql-relay": "0.6.0",
-    "reflect-metadata": "0.1.13"
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/graphql": "^7.0.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
+    "dataloader": "^2.0.0",
+    "graphql": "^15.0.0",
+    "graphql-relay": "^0.6.0"
   },
   "devDependencies": {
     "@nestjs/common": "7.1.1",
@@ -68,7 +67,6 @@
     "dataloader": "2.0.0",
     "graphql": "15.0.0",
     "graphql-relay": "0.6.0",
-    "reflect-metadata": "0.1.13",
     "ts-mockito": "2.5.0",
     "typescript": "3.9.3"
   }
