--- a/packages/query-sequelize/package.json
+++ b/packages/query-sequelize/package.json
@@ -22,10 +22,10 @@
     "lodash.pick": "4.4.0"
   },
   "peerDependencies": {
-    "@nestjs/common": "7.1.1",
-    "@nestjs/sequelize": "0.1.0",
-    "sequelize": "5.21.11",
-    "sequelize-typescript": "1.1.0"
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/sequelize": "^0.1.0",
+    "sequelize": "^5.21.11",
+    "sequelize-typescript": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/common": "7.1.1",
