--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -21,10 +21,10 @@
     "@nestjs-query/core": "0.11.7"
   },
   "peerDependencies": {
-    "@nestjs/common": "7.1.1",
-    "@nestjs/typeorm": "7.1.0",
-    "class-transformer": "0.2.3",
-    "typeorm": "0.2.25"
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/typeorm": "^7.0.0",
+    "class-transformer": "^0.2.3",
+    "typeorm": "^0.2.7"
   },
   "devDependencies": {
     "@nestjs/common": "7.1.1",
