chore(): Turn off logging in examples

--- a/examples/federation/sub-task-graphql/ormconfig.json
+++ b/examples/federation/sub-task-graphql/ormconfig.json
@@ -9,7 +9,8 @@
   "entities": [
     "dist/**/*.entity.js"
   ],
-  "seeds": ["./dist/seeds.js"],
-  "synchronize": true,
-  "logging": true
+  "seeds": [
+    "./dist/seeds.js"
+  ],
+  "synchronize": true
 }
