--- a/examples/nest-graphql-typeorm-soft-delete/ormconfig.json
+++ b/examples/nest-graphql-typeorm-soft-delete/ormconfig.json
@@ -5,8 +5,11 @@
   "username": "typeorm_soft_delete",
   "database": "typeorm_soft_delete",
   "autoLoadEntities": true,
-  "entities": ["**/*.entity.js"],
-  "seeds": ["./dist/seeds.js"],
-  "synchronize": true,
-  "logging": true
+  "entities": [
+    "**/*.entity.js"
+  ],
+  "seeds": [
+    "./dist/seeds.js"
+  ],
+  "synchronize": true
 }
