--- a/examples/nest-graphql-typeorm/ormconfig.json
+++ b/examples/nest-graphql-typeorm/ormconfig.json
@@ -5,10 +5,13 @@
   "username": "typeorm",
   "database": "typeorm",
   "autoLoadEntities": true,
-  "entities": ["**/*.entity.js"],
-  "seeds": ["./dist/seeds.js"],
+  "entities": [
+    "**/*.entity.js"
+  ],
+  "seeds": [
+    "./dist/seeds.js"
+  ],
   "synchronize": true,
-  "logging": true,
   "cli": {
     "migrationsDir": "./migrations"
   }
