--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -29,7 +29,7 @@
     "directory": "packages/query-graphql"
   },
   "scripts": {
-    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
     "build": "npm run clean && npm run compile",
     "clean": "rm -rf ./dist && rm -rf tsconfig.tsbuildinfo",
     "compile": "tsc -p tsconfig.build.json"
