--- a/packages/query-sequelize/package.json
+++ b/packages/query-sequelize/package.json
@@ -44,7 +44,7 @@
     "directory": "packages/query-sequelize"
   },
   "scripts": {
-    "prepare": "npm run build",
+    "prepublishOnly": "npm run build",
     "build": "npm run clean && npm run compile",
     "clean": "rm -rf ./dist && rm -rf tsconfig.tsbuildinfo",
     "compile": "tsc -p tsconfig.build.json"
