--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@nestjs/common": "7.2.0",
     "@nestjs/typeorm": "7.1.0",
+    "@nestjs/testing": "7.2.0",
     "class-transformer": "0.2.3",
     "sqlite3": "4.2.0",
     "ts-mockito": "2.6.1",
