--- a/packages/query-sequelize/package.json
+++ b/packages/query-sequelize/package.json
@@ -32,6 +32,7 @@
     "@nestjs/sequelize": "0.1.0",
     "@types/lodash.pick": "4.4.6",
     "@types/sequelize": "4.28.9",
+    "@nestjs/testing": "7.2.0",
     "sequelize": "5.21.13",
     "sequelize-typescript": "1.1.0",
     "sqlite3": "4.2.0",
