--- a/examples/package.json
+++ b/examples/package.json
@@ -22,6 +22,8 @@
     "@nestjs/platform-express": "7.3.2",
     "@nestjs/sequelize": "0.1.0",
     "@nestjs/typeorm": "7.1.0",
+    "graphql-query-complexity": "0.6.0",
+    "apollo-server-plugin-base": "0.9.1",
     "apollo-server-express": "2.15.1",
     "class-validator": "0.12.2",
     "graphql": "15.3.0",
