--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -42,7 +42,8 @@
     "lodash.omit": "^4.5.0",
     "lower-case-first": "^2.0.1",
     "pluralize": "^8.0.0",
-    "upper-case-first": "^2.0.1"
+    "upper-case-first": "^2.0.1",
+    "graphql-fields": "^2.0.3"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
@@ -63,6 +64,7 @@
     "@types/lodash.omit": "4.5.6",
     "@types/node-fetch": "2.5.7",
     "@types/pluralize": "0.0.29",
+    "@types/graphql-fields": "1.3.3",
     "class-transformer": "0.2.3",
     "class-validator": "0.12.2",
     "dataloader": "2.0.0",
