--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-graphql",
-  "version": "0.17.4",
+  "version": "0.17.5",
   "description": "Nestjs graphql query adapter",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -39,11 +39,11 @@
   },
   "dependencies": {
     "@nestjs-query/core": "0.17.2",
+    "graphql-fields": "^2.0.3",
     "lodash.omit": "^4.5.0",
     "lower-case-first": "^2.0.1",
     "pluralize": "^8.0.0",
-    "upper-case-first": "^2.0.1",
-    "graphql-fields": "^2.0.3"
+    "upper-case-first": "^2.0.1"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
@@ -60,11 +60,11 @@
     "@nestjs/graphql": "7.5.5",
     "@nestjs/testing": "7.3.2",
     "@types/graphql": "14.5.0",
+    "@types/graphql-fields": "1.3.3",
     "@types/graphql-relay": "0.6.0",
     "@types/lodash.omit": "4.5.6",
     "@types/node-fetch": "2.5.7",
     "@types/pluralize": "0.0.29",
-    "@types/graphql-fields": "1.3.3",
     "class-transformer": "0.2.3",
     "class-validator": "0.12.2",
     "dataloader": "2.0.0",
