--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -18,7 +18,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.17.10"
+    "@nestjs-query/core": "0.17.10",
+    "lodash.filter": "^4.6.0",
+    "lodash.omit": "^4.5.0"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
@@ -30,6 +32,8 @@
     "@nestjs/common": "7.4.2",
     "@nestjs/testing": "7.4.2",
     "@nestjs/typeorm": "7.1.0",
+    "@types/lodash.filter": "^4.6.6",
+    "@types/lodash.omit": "^4.5.6",
     "class-transformer": "0.3.1",
     "sqlite3": "5.0.0",
     "ts-mockito": "2.6.1",
