--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -32,8 +32,8 @@
     "@nestjs/common": "7.4.2",
     "@nestjs/testing": "7.4.2",
     "@nestjs/typeorm": "7.1.0",
-    "@types/lodash.filter": "^4.6.6",
-    "@types/lodash.omit": "^4.5.6",
+    "@types/lodash.filter": "4.6.6",
+    "@types/lodash.omit": "4.5.6",
     "class-transformer": "0.3.1",
     "sqlite3": "5.0.0",
     "ts-mockito": "2.6.1",
