--- a/examples/package.json
+++ b/examples/package.json
@@ -22,6 +22,11 @@
     "@nestjs/platform-express": "7.4.2",
     "@nestjs/sequelize": "0.1.1",
     "@nestjs/typeorm": "7.1.0",
+    "@nestjs/passport": "7.1.0",
+    "@nestjs/jwt": "7.1.0",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
     "apollo-server-express": "2.16.1",
     "apollo-server-plugin-base": "0.9.1",
     "class-validator": "0.12.2",
@@ -45,6 +50,8 @@
     "@types/jest": "26.0.10",
     "@types/node": "13.13.5",
     "@types/supertest": "2.0.10",
+    "@types/passport-jwt": "3.0.3",
+    "@types/passport-local": "1.0.33",
     "jest": "26.4.2",
     "prettier": "2.0.5",
     "supertest": "4.0.2",
