--- a/packages/query-typeorm-mongo/package.json
+++ b/packages/query-typeorm-mongo/package.json
@@ -36,6 +36,7 @@
     "@types/lodash.omit": "4.5.6",
     "@types/mongodb": "^3.5.26",
     "class-transformer": "0.3.1",
+    "mongodb": "^3.6.0",
     "ts-mockito": "2.6.1",
     "typeorm": "0.2.25",
     "typescript": "4.0.2"
