--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nestjs-query/query-typeorm-mongo",
+  "name": "@nestjs-query/query-typegoose",
   "version": "0.18.1",
   "description": "Typeorm adapter for @nestjs-query/core",
   "author": "doug-martin <doug@dougamartin.com>",
@@ -24,21 +24,24 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
-    "@nestjs/typeorm": "^7.0.0",
+    "@typegoose/typegoose": "^7.3.3",
     "class-transformer": "^0.2.3 || ^0.3.0",
-    "typeorm": "^0.2.7"
+    "mongoose": "^5.10.0",
+    "nestjs-typegoose": "^7.1.32"
   },
   "devDependencies": {
     "@nestjs/common": "7.4.2",
     "@nestjs/testing": "7.4.2",
-    "@nestjs/typeorm": "7.1.0",
+    "@typegoose/typegoose": "^7.3.3",
     "@types/lodash.filter": "4.6.6",
     "@types/lodash.omit": "4.5.6",
     "@types/mongodb": "^3.5.26",
+    "@types/mongoose": "^5.7.36",
     "class-transformer": "0.3.1",
-    "mongodb": "^3.6.0",
+    "mongodb-memory-server": "^6.6.5",
+    "mongoose": "^5.10.0",
+    "nestjs-typegoose": "^7.1.32",
     "ts-mockito": "2.6.1",
-    "typeorm": "0.2.25",
     "typescript": "4.0.2"
   },
   "repository": {
