--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -19,8 +19,7 @@
   },
   "dependencies": {
     "@nestjs-query/core": "0.18.1",
-    "lodash.filter": "^4.6.0",
-    "lodash.omit": "^4.5.0"
+    "lodash.escaperegexp": "^4.1.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
@@ -33,8 +32,7 @@
     "@nestjs/common": "7.4.2",
     "@nestjs/testing": "7.4.2",
     "@typegoose/typegoose": "^7.3.3",
-    "@types/lodash.filter": "4.6.6",
-    "@types/lodash.omit": "4.5.6",
+    "@types/lodash.escaperegexp": "^4.1.6",
     "@types/mongodb": "^3.5.26",
     "@types/mongoose": "^5.7.36",
     "class-transformer": "0.3.1",
