--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -47,6 +47,7 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.0.0",
     "class-transformer": "^0.2.3 || ^0.3.0",
     "class-validator": "^0.12.2",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@nestjs/common": "7.4.2",
+    "@nestjs/core": "7.4.2",
     "@nestjs/graphql": "7.6.0",
     "@nestjs/testing": "7.4.2",
     "@types/graphql": "14.5.0",
