--- a/renovate.json
+++ b/renovate.json
@@ -2,10 +2,20 @@
   "extends": [
     "config:base"
   ],
-  "packageRules": [{
-    "depTypeList": ["devDependencies"],
-    "automerge": true
-  }],
+  "packageRules": [
+    {
+      "depTypeList": [
+        "devDependencies"
+      ],
+      "automerge": true
+    },
+    {
+      "paths": [
+        "examples/**"
+      ],
+      "automerge": true
+    }
+  ],
   "ignorePaths": [
   ]
 }
