fix(): Fix gthub token in final build step

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -113,5 +113,5 @@ jobs:
       - name: Coveralls Finished
         uses: coverallsapp/github-action@master
         with:
-          github-token: ${{ secrets.github_token }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           parallel-finished: true
