--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,7 +35,8 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
-    "class-transformer": "^0.2.3 || ^0.3.0"
+    "class-transformer": "^0.2.3 || ^0.3.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@nestjs/common": "7.4.4",
