--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/doug-martin/nestjs-query/issues"
   },
   "dependencies": {
-    "lodash.merge": "4.6.2"
+    "lodash.merge": "^4.6.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
