--- a/packages/query-mongoose/package.json
+++ b/packages/query-mongoose/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@nestjs-query/query-typegoose",
+  "name": "@nestjs-query/query-mongoose",
   "version": "0.19.1",
-  "description": "Typeorm adapter for @nestjs-query/core",
+  "description": "Mongoose adapter for @nestjs-query/core",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
   "license": "MIT",
@@ -18,31 +18,31 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.19.0",
+    "@nestjs-query/core": "0.20.0",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.merge": "^4.6.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
-    "@typegoose/typegoose": "^7.3.3",
+    "@nestjs/mongoose": "^7.0.0",
     "class-transformer": "^0.2.3 || ^0.3.0",
     "mongoose": "^5.10.0",
-    "nestjs-typegoose": "^7.1.32"
+    "mongodb": "^3.6.0"
   },
   "devDependencies": {
-    "@nestjs/common": "7.4.2",
-    "@nestjs/testing": "7.4.2",
-    "@typegoose/typegoose": "^7.3.3",
-    "@types/lodash.escaperegexp": "^4.1.6",
-    "@types/lodash.merge": "^4.6.6",
-    "@types/mongodb": "^3.5.26",
-    "@types/mongoose": "^5.7.36",
+    "@nestjs/common": "7.4.4",
+    "@nestjs/mongoose": "7.0.2",
+    "@nestjs/testing": "7.4.4",
+    "@types/lodash.escaperegexp": "4.1.6",
+    "@types/lodash.merge": "4.6.6",
+    "@types/mongodb": "3.5.27",
+    "@types/mongoose": "5.7.36",
     "class-transformer": "0.3.1",
-    "mongodb-memory-server": "^6.6.5",
-    "mongoose": "^5.10.0",
-    "nestjs-typegoose": "^7.1.32",
+    "mongodb-memory-server": "6.7.6",
+    "mongoose": "5.10.6",
+    "mongodb": "3.6.2",
     "ts-mockito": "2.6.1",
-    "typescript": "4.0.2"
+    "typescript": "4.0.3"
   },
   "repository": {
     "type": "git",
