--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -35,6 +35,7 @@
     "@nestjs/typeorm": "7.1.4",
     "@types/lodash.filter": "4.6.6",
     "@types/lodash.omit": "4.5.6",
+    "@types/uuid": "8.3.0",
     "class-transformer": "0.3.1",
     "sqlite3": "5.0.0",
     "ts-mockito": "2.6.1",
