--- a/packages/query-mongoose/package.json
+++ b/packages/query-mongoose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-mongoose",
-  "version": "0.19.1",
+  "version": "0.20.1",
   "description": "Mongoose adapter for @nestjs-query/core",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -18,7 +18,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.20.0",
+    "@nestjs-query/core": "0.20.1",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.merge": "^4.6.2"
   },
@@ -39,7 +39,7 @@
     "@types/mongoose": "5.7.36",
     "class-transformer": "0.3.1",
     "mongodb-memory-server": "6.7.6",
-    "mongoose": "5.10.6",
+    "mongoose": "5.10.7",
     "mongodb": "3.6.2",
     "ts-mockito": "2.6.1",
     "typescript": "4.0.3"
@@ -52,7 +52,7 @@
   "scripts": {
     "prepublishOnly": "npm run build",
     "prebuild": "npm run clean",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.json",
     "clean": "rm -rf ./dist && rm -rf tsconfig.tsbuildinfo"
   },
   "bugs": {
