example(mongoose): Add mongoose example

--- a/examples/package.json
+++ b/examples/package.json
@@ -16,10 +16,12 @@
     "@nestjs-query/query-graphql": "0.20.2",
     "@nestjs-query/query-sequelize": "0.20.2",
     "@nestjs-query/query-typeorm": "0.20.2",
+    "@nestjs-query/query-mongoose": "0.20.2",
     "@nestjs/common": "7.4.4",
     "@nestjs/core": "7.4.4",
     "@nestjs/graphql": "7.7.0",
     "@nestjs/jwt": "7.1.0",
+    "@nestjs/mongoose": "7.0.2",
     "@nestjs/passport": "7.1.0",
     "@nestjs/platform-express": "7.4.4",
     "@nestjs/sequelize": "0.1.1",
@@ -31,6 +33,7 @@
     "graphql-query-complexity": "0.7.0",
     "graphql-tools": "6.2.4",
     "mysql2": "2.2.5",
+    "mongoose": "5.10.7",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
@@ -52,6 +55,7 @@
     "@types/passport-jwt": "3.0.3",
     "@types/passport-local": "1.0.33",
     "@types/supertest": "2.0.10",
+    "@types/mongoose": "5.7.36",
     "jest": "26.5.3",
     "prettier": "2.1.2",
     "supertest": "5.0.0",
