--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -27,3 +27,16 @@ services:
     image: "redis:6"
     ports:
       - "6379:6379"
+  mongo:
+    image: "mongo:4.4"
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./init/-scripts/mongodb/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+  mongo-express:
+    image: "mongo-express:latest"
+    restart: always
+    ports:
+      - 8081:8081
+
