fix(eslint): Fix eslint to recognize sub packages

--- a/packages/query-graphql/tsconfig.json
+++ b/packages/query-graphql/tsconfig.json
@@ -5,8 +5,8 @@
     "rootDir": "."
   },
   "include": [
-    "src",
-    "__tests__"
+    "./src",
+    "./__tests__"
   ],
   "exclude": [
     "node_modules",
