--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -7,11 +7,11 @@
   "include": [
     "./helpers",
     "**/src",
+    "**/e2e",
     "**/ormconfig.json"
   ],
   "exclude": [
     "node_modules",
-    "dist",
-    "**/*spec.ts"
+    "dist"
   ]
 }
