--- a/packages/query-typeorm/tsconfig.json
+++ b/packages/query-typeorm/tsconfig.json
@@ -4,6 +4,10 @@
     "outDir": "./dist",
     "rootDir": "."
   },
+  "include": [
+    "./src",
+    "./__tests__"
+  ],
   "exclude": [
     "node_modules",
     "dist"
