--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,16 +7,31 @@
             "@nestjs-query/query-graphql": ["packages/query-graphql/src"],
             "@nestjs-query/query-typeorm": ["packages/query-typeorm/src"],
             "@nestjs-query/query-sequelize": ["packages/query-sequelize/src"],
-            "@nestjs-query/query-mongoose": ["packages/query-mongoose/src"]
+            "@nestjs-query/query-mongoose": ["packages/query-mongoose/src"],
+            "@nestjs-query/query-typegoose": ["packages/query-typegoose/src"]
         }
     },
-    "references": [
-        {"path": "./packages/core"},
-        {"path": "./packages/query-graphql"},
-        {"path": "./packages/query-typeorm"},
-        {"path": "./packages/query-sequelize"},
-        {"path": "./packages/query-mongoose-"},
-        {"path": "./examples"}
+    "references": [{
+            "path": "./packages/core"
+        },
+        {
+            "path": "./packages/query-graphql"
+        },
+        {
+            "path": "./packages/query-typeorm"
+        },
+        {
+            "path": "./packages/query-sequelize"
+        },
+        {
+            "path": "./packages/query-mongoose"
+        },
+        {
+            "path": "./packages/query-typegoose"
+        },
+        {
+            "path": "./examples"
+        }
     ],
     "files": []
 }
