--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@nestjs-query/core": "0.21.0",
     "lodash.escaperegexp": "^4.1.2",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "mongoose": "5.10.9",
+    "mongodb": "3.6.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
