feat: adds typegoose e2e testing

--- a/examples/package.json
+++ b/examples/package.json
@@ -17,6 +17,7 @@
     "@nestjs-query/query-mongoose": "0.21.2",
     "@nestjs-query/query-sequelize": "0.21.2",
     "@nestjs-query/query-typeorm": "0.21.2",
+    "@nestjs-query/query-typegoose": "github:JohnMcInall/nestjs-query-typegoose",
     "@nestjs/common": "7.5.4",
     "@nestjs/core": "7.5.4",
     "@nestjs/graphql": "7.8.2",
@@ -26,6 +27,7 @@
     "@nestjs/platform-express": "7.5.4",
     "@nestjs/sequelize": "0.1.1",
     "@nestjs/typeorm": "7.1.5",
+    "@typegoose/typegoose": "7.4.5",
     "apollo-server-express": "2.19.0",
     "apollo-server-plugin-base": "0.10.2",
     "class-validator": "0.12.2",
@@ -34,6 +36,7 @@
     "graphql-tools": "6.2.6",
     "mongoose": "5.10.15",
     "mysql2": "2.2.5",
+    "nestjs-typegoose": "^7.1.38",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
