--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint --ext=.ts .",
     "lint:fix": "eslint --fix --ext=.ts .",
     "jest": "jest --runInBand --coverage",
-    "jest:e2e": "jest --runInBand --coverage --config=./jest.e2e.config.js",
+    "jest:e2e": "jest --runInBand --config=./jest.e2e.config.js",
     "jest:unit": "jest --coverage --config=./jest.unit.config.js",
     "coverage": "cat ./coverage/lcov.info | coveralls"
   },
