--- a/examples/package.json
+++ b/examples/package.json
@@ -17,24 +17,24 @@
     "@nestjs-query/query-mongoose": "0.21.2",
     "@nestjs-query/query-sequelize": "0.21.2",
     "@nestjs-query/query-typeorm": "0.21.2",
-    "@nestjs-query/query-typegoose": "github:JohnMcInall/nestjs-query-typegoose",
-    "@nestjs/common": "7.5.4",
-    "@nestjs/core": "7.5.4",
-    "@nestjs/graphql": "7.8.2",
+    "@nestjs-query/query-typegoose": "github:smolinari/nestjs-query-typegoose",
+    "@nestjs/common": "7.6.4",
+    "@nestjs/core": "7.6.4",
+    "@nestjs/graphql": "7.9.1",
     "@nestjs/jwt": "7.2.0",
     "@nestjs/mongoose": "7.1.2",
     "@nestjs/passport": "7.1.5",
     "@nestjs/platform-express": "7.6.4",
     "@nestjs/sequelize": "0.1.1",
     "@nestjs/typeorm": "7.1.5",
-    "@typegoose/typegoose": "7.4.5",
+    "@typegoose/typegoose": "^7.4.1",
     "apollo-server-express": "2.19.0",
     "apollo-server-plugin-base": "0.10.2",
     "class-validator": "0.12.2",
     "graphql": "15.4.0",
     "graphql-query-complexity": "0.7.2",
     "graphql-tools": "7.0.2",
-    "mongoose": "5.10.19",
+    "mongoose": "5.10.18",
     "mysql2": "2.2.5",
     "nestjs-typegoose": "^7.1.38",
     "passport": "0.4.1",
@@ -54,7 +54,7 @@
     "@nestjs/testing": "7.6.4",
     "@types/express": "4.17.9",
     "@types/jest": "26.0.19",
-    "@types/mongoose": "5.10.1",
+    "@types/mongoose": "5.10.2",
     "@types/node": "13.13.5",
     "@types/passport-jwt": "3.0.3",
     "@types/passport-local": "1.0.33",
