--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-typegoose",
-  "version": "0.0.1",
+  "version": "0.21.2",
   "description": "Typegoose adapter for @nestjs-query/core",
   "author": "john mcinall<johnmcinall@gmail.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -18,7 +18,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.21.0",
+    "@nestjs-query/core": "0.21.2",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.merge": "^4.6.2"
   },
@@ -27,22 +27,22 @@
     "@nestjs/mongoose": "^7.0.0",
     "nestjs-typegoose": "^7.1.38",
     "@typegoose/typegoose": "^7.4.1",
-    "mongoose": "5.10.15",
+    "mongoose": "5.10.18",
     "mongodb": "3.6.3"
   },
   "devDependencies": {
-    "@nestjs/common": "7.6.4",
+    "@nestjs/common": "7.6.11",
     "@nestjs/mongoose": "7.1.2",
-    "@nestjs/testing": "7.6.4",
+    "@nestjs/testing": "7.6.11",
     "@types/lodash.escaperegexp": "4.1.6",
     "@types/lodash.merge": "4.6.6",
     "@types/mongodb": "3.6.3",
     "nestjs-typegoose": "^7.1.38",
     "@typegoose/typegoose": "^7.4.1",
     "@types/mongoose": "5.10.2",
-    "class-transformer": "0.3.1",
-    "mongodb": "3.6.3",
-    "mongodb-memory-server": "6.9.2",
+    "class-transformer": "0.3.2",
+    "mongodb": "3.6.4",
+    "mongodb-memory-server": "6.9.3",
     "mongoose": "5.10.18",
     "ts-mockito": "2.6.1",
     "typescript": "4.1.3"
@@ -50,7 +50,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/doug-martin/nestjs-query.git",
-    "directory": "packages/query-typeorm"
+    "directory": "packages/query-typegoose"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
