--- a/packages/query-mongoose/package.json
+++ b/packages/query-mongoose/package.json
@@ -35,11 +35,10 @@
     "@types/lodash.escaperegexp": "4.1.6",
     "@types/lodash.merge": "4.6.6",
     "@types/mongodb": "3.6.3",
-    "@types/mongoose": "5.10.2",
     "class-transformer": "0.3.2",
     "mongodb": "3.6.4",
     "mongodb-memory-server": "6.9.3",
-    "mongoose": "5.10.18",
+    "mongoose": "^5.11.18",
     "ts-mockito": "2.6.1",
     "typescript": "4.1.3"
   },
