feat(typegoose): WIP

--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -24,22 +24,19 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
-    "@nestjs/mongoose": "^7.0.0",
+    "@typegoose/typegoose": "file:~/tmp/typegoose",
     "nestjs-typegoose": "^7.1.38",
-    "@typegoose/typegoose": "git+https://github.com/typegoose/typegoose.git#update_mongoose5.11_2",
-    "mongoose": "5.10.18",
+    "mongoose": "^5.11.18",
     "mongodb": "3.6.3"
   },
   "devDependencies": {
     "@nestjs/common": "7.6.11",
-    "@nestjs/mongoose": "7.1.2",
     "@nestjs/testing": "7.6.11",
+    "@typegoose/typegoose": "file:~/tmp/typegoose",
     "@types/lodash.escaperegexp": "4.1.6",
     "@types/lodash.merge": "4.6.6",
     "@types/mongodb": "3.6.3",
     "nestjs-typegoose": "^7.1.38",
-    "@typegoose/typegoose": "^7.4.1",
-    "@types/mongoose": "5.10.2",
     "class-transformer": "0.3.2",
     "mongodb": "3.6.4",
     "mongodb-memory-server": "6.9.3",
