--- a/examples/package.json
+++ b/examples/package.json
@@ -27,7 +27,7 @@
     "@nestjs/platform-express": "7.6.11",
     "@nestjs/sequelize": "0.1.1",
     "@nestjs/typeorm": "7.1.5",
-    "@typegoose/typegoose": "^7.4.1",
+    "@typegoose/typegoose": "link:~/tmp/typegoose",
     "apollo-server-express": "2.19.2",
     "apollo-server-plugin-base": "0.10.4",
     "class-validator": "0.12.2",
@@ -54,7 +54,6 @@
     "@nestjs/testing": "7.6.11",
     "@types/express": "4.17.11",
     "@types/jest": "26.0.20",
-    "@types/mongoose": "5.10.2",
     "@types/node": "13.13.5",
     "@types/passport-jwt": "3.0.4",
     "@types/passport-local": "1.0.33",
