--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -24,20 +24,21 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
-    "@typegoose/typegoose": "file:~/tmp/typegoose",
+    "@typegoose/typegoose": "^8.0.0-beta.2",
     "nestjs-typegoose": "^7.1.38",
     "mongoose": "^5.11.18",
     "mongodb": "3.6.3"
   },
   "devDependencies": {
     "@nestjs/common": "7.6.11",
+    "@nestjs/mongoose": "7.1.2",
     "@nestjs/testing": "7.6.11",
-    "@typegoose/typegoose": "file:~/tmp/typegoose",
+    "@typegoose/typegoose": "^8.0.0-beta.2",
     "@types/lodash.escaperegexp": "4.1.6",
     "@types/lodash.merge": "4.6.6",
     "@types/mongodb": "3.6.3",
     "nestjs-typegoose": "^7.1.38",
-    "class-transformer": "0.3.2",
+    "class-transformer": "0.3.1",
     "mongodb": "3.6.4",
     "mongodb-memory-server": "6.9.3",
     "mongoose": "^5.11.18",
