feat(typegoose): Add typegoose package (#846)
* wip: Typegoose implementation for nestjs-query

* feat: Implementation of the rest of QueryService and Tests

* fix: adding in assemblers that were missed

* docs: Adding documentation for typegoose

* docs: Updating install guides to include Typegoose

* docs: Updating the getting-started documentation

* feat: adding the ability to add and remove items from an array using a specific UpdateArray Input type.

* feat: adds typegoose e2e testing

* tests: fixes failing typegoose unit tests

* chore: remove commented code

* feat(typegoose): Getting tests passing

* Initial work

* feat(typegoose): WIP

* feat(typegoose): WIP

* feat(typegoose): WIP

* feat(typegoose): small corrections

* chore(): Update typegoose example to use QueryOptions decorator

* chore(): Fix linting issues

Co-authored-by: John McInall <johnmcinall@odro.co.uk>
Co-authored-by: John McInall <johnmcinall@pop-os.localdomain>
Co-authored-by: Scott <scott.molinari@adduco.de>
Co-authored-by: John McInall <johnmcinall@gmail.com>

--- a/examples/package.json
+++ b/examples/package.json
@@ -17,6 +17,7 @@
     "@nestjs-query/query-mongoose": "0.23.1",
     "@nestjs-query/query-sequelize": "0.23.0",
     "@nestjs-query/query-typeorm": "0.23.1",
+    "@nestjs-query/query-typegoose": "0.23.0",
     "@nestjs/common": "7.6.14",
     "@nestjs/core": "7.6.14",
     "@nestjs/graphql": "7.9.11",
@@ -26,6 +27,7 @@
     "@nestjs/platform-express": "7.6.14",
     "@nestjs/sequelize": "0.2.0",
     "@nestjs/typeorm": "7.1.5",
+    "@typegoose/typegoose": "8.0.0-beta.2",
     "apollo-server-express": "2.21.1",
     "apollo-server-plugin-base": "0.10.4",
     "class-validator": "0.13.1",
@@ -34,6 +36,7 @@
     "graphql-tools": "7.0.4",
     "mongoose": "5.12.0",
     "mysql2": "2.2.5",
+    "nestjs-typegoose": "^7.1.38",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
