--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -49,7 +49,7 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.0.0",
-    "class-transformer": "^0.2.3 || ^0.3.0",
+    "class-transformer": "^0.2.3 || 0.3.1",
     "class-validator": "^0.13.0",
     "dataloader": "^2.0.0",
     "graphql": "^15.0.0",
@@ -67,7 +67,7 @@
     "@types/lodash.omit": "4.5.6",
     "@types/node-fetch": "2.5.8",
     "@types/pluralize": "0.0.29",
-    "class-transformer": "0.3.2",
+    "class-transformer": "0.3.1",
     "class-validator": "0.13.1",
     "dataloader": "2.0.0",
     "graphql": "15.5.0",
