--- a/packages/query-typegoose/package.json
+++ b/packages/query-typegoose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-typegoose",
-  "version": "0.23.0",
+  "version": "0.24.0",
   "description": "Typegoose adapter for @nestjs-query/core",
   "author": "john mcinall<johnmcinall@gmail.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -18,16 +18,16 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.23.0",
+    "@nestjs-query/core": "0.24.0",
     "lodash.escaperegexp": "^4.1.2",
     "lodash.merge": "^4.6.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
     "@typegoose/typegoose": "^8.0.0-beta.2",
-    "nestjs-typegoose": "^7.1.38",
+    "mongodb": "3.6.3",
     "mongoose": "^5.11.18",
-    "mongodb": "3.6.3"
+    "nestjs-typegoose": "^7.1.38"
   },
   "devDependencies": {
     "@nestjs/common": "7.6.14",
@@ -36,11 +36,11 @@
     "@types/lodash.escaperegexp": "4.1.6",
     "@types/lodash.merge": "4.6.6",
     "@types/mongodb": "3.6.9",
-    "nestjs-typegoose": "^7.1.38",
     "class-transformer": "0.3.1",
     "mongodb": "3.6.4",
     "mongodb-memory-server": "6.9.6",
     "mongoose": "5.12.0",
+    "nestjs-typegoose": "^7.1.38",
     "ts-mockito": "2.6.1",
     "typescript": "4.2.3"
   },
