--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,12 +31,13 @@
     "url": "https://github.com/doug-martin/nestjs-query/issues"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "tslib": "^2.1.0",
+    "reflect-metadata": "^0.1.13"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
-    "class-transformer": "^0.2.3 || 0.3.1",
-    "reflect-metadata": "^0.1.13"
+    "class-transformer": "^0.2.3 || 0.3.1"
   },
   "devDependencies": {
     "@nestjs/common": "7.6.14",
