--- a/packages/query-mongoose/package.json
+++ b/packages/query-mongoose/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@nestjs-query/core": "0.24.0",
     "lodash.escaperegexp": "^4.1.2",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "tslib": "^2.1.0"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
