--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -21,7 +21,8 @@
     "@nestjs-query/core": "0.24.0",
     "lodash.filter": "^4.6.0",
     "lodash.omit": "^4.5.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "tslib": "^2.1.0"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
