--- a/packages/query-typeorm/package.json
+++ b/packages/query-typeorm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-typeorm",
-  "version": "0.24.1",
+  "version": "0.24.4",
   "description": "Typeorm adapter for @nestjs-query/core",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -18,11 +18,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.24.0",
+    "@nestjs-query/core": "0.24.4",
     "lodash.filter": "^4.6.0",
     "lodash.omit": "^4.5.0",
-    "uuid": "8.3.2",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "uuid": "8.3.2"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
