--- a/packages/query-graphql/package.json
+++ b/packages/query-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-query/query-graphql",
-  "version": "0.24.3",
+  "version": "0.24.4",
   "description": "Nestjs graphql query adapter",
   "author": "doug-martin <doug@dougamartin.com>",
   "homepage": "https://github.com/doug-martin/nestjs-query#readme",
@@ -38,13 +38,13 @@
     "url": "https://github.com/doug-martin/nestjs-query/issues"
   },
   "dependencies": {
-    "@nestjs-query/core": "0.24.0",
+    "@nestjs-query/core": "0.24.4",
     "graphql-fields": "^2.0.3",
     "lodash.omit": "^4.5.0",
     "lower-case-first": "^2.0.1",
     "pluralize": "^8.0.0",
-    "upper-case-first": "^2.0.1",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "upper-case-first": "^2.0.1"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0",
